--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_database: ^10.3.3
   sn_progress_dialog: ^1.1.3
   google_maps_flutter: ^2.5.0
+  geolocator: ^10.1.0
+  permission_handler: ^11.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
